--- a/prep/bd/hab/v2020/coral_trend.Rmd
+++ b/prep/bd/hab/v2020/coral_trend.Rmd
@@ -4,7 +4,7 @@ author: "*Compiled on `r date()` by `r Sys.info()['user']`*"
 output: 
   html_document:
     toc: true
-    number_depth: 3 
+    toc_depth: 3 
     toc_float: yes
     number_sections: false
     theme: cerulean
@@ -36,8 +36,6 @@ library(here)
 source(here('src/R/common.R'))
 
 dir_goal   <- '~/github/pal-prep/prep/bd/hab/v2020'
-dir_global <- '~/github/ohiprep_v2020/globalprep'
-dir_scores <- '~/github/pal-scores/region'
 ```
 
 # Methods
