--- a/prep/bd/spp/v2020/2_pal_spp_lists.Rmd
+++ b/prep/bd/spp/v2020/2_pal_spp_lists.Rmd
@@ -4,21 +4,24 @@ author: "*Compiled on `r date()` by `r Sys.info()['user']`*"
 output: 
   html_document:
     toc: true
-    number_sections: true
+    toc_depth: 3 
+    toc_float: yes
+    number_sections: false
     theme: cerulean
     highlight: haddock
     includes: 
-     #in_header: '../../../workflow/templates/ohi_hdr.html' - need to update this
+     in_header: '../../../src/templates/ohi_hdr.html' 
   pdf_document:
     toc: true
-editor_options: 
-  chunk_output_type: console
 ---
 
 # Summary
 
 Additional species lists were obtained for Palmyra fish and birds. These lists are added to the IUCN species list created in `1_iucn_spp_lists.Rmd`.   
 
+# Data
+
+The additional species lists were obtained from Alex Wegmann at The Nature Conservancy on July 8, 2020.   
 
 # Setup 
 
