--- a/prep/bd/spp/v2020/4_spp_trend.Rmd
+++ b/prep/bd/spp/v2020/4_spp_trend.Rmd
@@ -4,20 +4,30 @@ author: "*Compiled on `r date()` by `r Sys.info()['user']`*"
 output: 
   html_document:
     toc: true
-    number_sections: true
+    toc_depth: 3 
+    toc_float: yes
+    number_sections: false
     theme: cerulean
     highlight: haddock
     includes: 
-     #in_header: '../../../workflow/templates/ohi_hdr.html' - need to update this
+     in_header: '../../../src/templates/ohi_hdr.html' 
   pdf_document:
     toc: true
-editor_options: 
-  chunk_output_type: console
 ---
 
 # Summary 
 
 This script estimates the population trend in species over time, using historic assessments and linear regression. Finally, missing species trends are gapfilled using the IUCN population trend designations of Increasing, Decreasing, and Stable.      
+
+# Data 
+
+Historic assessments are based on the IUCN Red List past assessments.   
+
+
+Citation: IUCN 2020. IUCN Red List of Threatened Species. Version 2020-1 <www.iucnredlist.org>
+  * __Accessed__: 9 June 2020 
+  * __Time range__: 1965-2020 (discrete past assessments by species) 
+  * __Format__:  JSON   
 
 # Setup
 
@@ -291,9 +301,6 @@ trend_na <- spp_trend_scores %>%
 
 trend_scores <- read_csv(file.path(dir_goal, 'output/spp_trend_scores.csv')) %>% 
   dplyr::select(-trend_source) # don't need the trend source in the toolbox 
-
-# save to toolbox
-dir_scores <- '~/github/pal-scores/region'
 
 write_csv(trend_scores, file.path(dir_scores, 'layers/spp_trend.csv'))
 ```
