--- a/prep/rs/v2020/sci_papers_data_prep.Rmd
+++ b/prep/rs/v2020/sci_papers_data_prep.Rmd
@@ -4,7 +4,7 @@ author: "*Compiled on `r date()` by `r Sys.info()['user']`*"
 output: 
   html_document:
     toc: true
-    number_depth: 3 
+    toc_depth: 2 
     toc_float: yes
     number_sections: false
     theme: cerulean
@@ -37,7 +37,6 @@ library(here)
 source(here('src/R/common.R'))
 
 dir_goal   <- '~/github/pal-prep/prep/rs/v2020'
-dir_scores <- '~/github/pal-scores/region'
 ```
 
 # Methods
