--- a/prep/sp/lsp/v2020/lsp_data_prep.Rmd
+++ b/prep/sp/lsp/v2020/lsp_data_prep.Rmd
@@ -4,7 +4,7 @@ author: "*Compiled on `r date()` by `r Sys.info()['user']`*"
 output: 
   html_document:
     toc: true
-    number_depth: 3 
+    toc_depth: 3 
     toc_float: yes
     number_sections: false
     theme: cerulean
@@ -38,7 +38,6 @@ source(here('src/R/common.R'))
 source(ohicore)
 
 dir_goal   <- '~/github/pal-prep/sp/lsp/v2020'
-dir_scores <- '~/github/pal-scores/region'
 ```
 
 # Methods
