--- a/prep/pressures/uv/v2020/uv_pressure_layer.Rmd
+++ b/prep/pressures/uv/v2020/uv_pressure_layer.Rmd
@@ -77,8 +77,7 @@ plot(world, col='black', add=T)
 
 ## Crop to Palmyra
 
-Using the `crop` function from the `raster` package we crop all uv rasters to the Palmyra extent and then reproject them to the US Albers projection for consistency across the assessment. We crop the global rasters first to reduce the time it takes to reproject the rasters. `ocean_ras_50nm` is used as a mask to remove land cells from the raster for better visuals.  
-
+Using the `crop` function from the `raster` package we crop all uv rasters to the Palmyra extent and then reproject them to the US Albers projection for consistency across the assessment. We crop the global rasters first to reduce the time it takes to reproject the rasters. `ocean_rast3_100` is used as a mask to remove land cells from the raster for better visuals.  
 
 ```{r crop-to-pal, eval=F}
 registerDoParallel(10) # Register 10 cores for parallel processing
@@ -148,11 +147,11 @@ saveGIF({
 
 Calculate total anomalous weeks for each 5-year period from 2005 - 2019.         
 
-```{r, five-year, eval=F}
+```{r five-year, eval=F}
 
 l <- list.files(file.path(dir_anx, "/dataprep/prs_uv/output/uv_annual_anoms"), full.names=T)
 
-# Last 5 year periood will start in 2015
+# Last 5 year period will start in 2015
 for(i in 2005:2015){ #i=2005
   
   yrs <- c(i,i+1,i+2,i+3,i+4)
@@ -193,15 +192,15 @@ foreach(file = uv_aggs) %dopar% {
 
 ## Presure Over Time
 
-Visualize the change in aggregated radiation anomolies over time.   
+Visualize the change in aggregated radiation anomalies over time.   
 
-```{r gif_rescale, eval = F}
+```{r gif-rescale, eval=F}
 
 resc <- lapply(list.files(file.path(dir_anx, '/dataprep/prs_uv/output/uv_rescaled'), full.names=T), raster) %>% 
   brick()
 
-names(resc) <- paste0("Years_", (substr(names(resc), 12, 20)))
-gsub(".", "-", names(resc), fixed = TRUE)
+names(resc) <- paste0("Years_", (substr(names(resc), 12, 20))) # Rename for plotting
+gsub(".", "-", names(resc), fixed = TRUE) # Replace the . with a -
 
 # Create a gif of values over time
 saveGIF({
@@ -255,7 +254,7 @@ write_csv(uv_data, file.path(dir_prs, "output/uv_pressure.csv"))
 ## Final Visualization
 
 ```{r uv-viz}
-uv_data <- read_csv("output/uv_pressure.csv")
+uv_data <- read_csv(file.path(dir_prs, "output/uv_pressure.csv"))
 
 
 ggplot(uv_data, aes(x = year, y = pressure_score)) +
