--- a/prep/pressures/oa/v2020/oa_pressure_layer.Rmd
+++ b/prep/pressures/oa/v2020/oa_pressure_layer.Rmd
@@ -17,269 +17,273 @@ output:
 
 # Summary 
 
-This script calculates the ocean acidification pressure layer derived from [NOAA's East Coast Ocean Acidification Product Suite](https://www.coral.noaa.gov/accrete/east-coast-oaps.html).
+This ocean acidification (OA) pressure layer preparation script does the following for newly available OA data:
 
-The Ultraviolet Radiation pressure layer is generated from daily data on Local Noon Erythemal UV Irradiance (mW/m2) derived from satellite observations. 
+- Calculates the annual mean for all years from 1958 - 2020 
+- Rescales each annual raster layer from 0 to 1 based on a biological threshold (&#937; <= 1) and the proportional change compared to a historical mean
+- Interpolates the data to gapfill for cells where there is no data
+- Resamples the rescaled raster layer to 1km^2^ cell resolution
+- Masks the resampled data to select only those cells within the ocean
 
-For the global OHI assessment, the raw data is processed into anomaly products. The data product of that process are rasters of total number of weekly anomalies per year. An anomaly is defined as greater than the mean climatology plus 1 standard deviation for that cell across the entire dataset (2005-2016).
-
-This script takes the global anomaly rasters and crops them to Palmyra. This time we have decided to use a reference point that represents a regime shift. Once a given cell is anomalous for more than 50% of a five-year period, it has shifted into a new regime. All cells that have a value greater than 130 weeks (51% of a 5 year time period) are assigned a 1. The rest of the cells are scaled to this reference point by dividing by 130.  
+***
 
 # Data
 
-The Ultraviolet Radiation pressures layer uses the [Aura OMI GLobal Surface UVB Data Product](https://disc.gsfc.nasa.gov/uui/datasets/OMUVBG_V003/summary#).  
+**Reference**: [Feely et al.(2009)](https://darchive.mblwhoilibrary.org/bitstream/handle/1912/3180/22-4_feely.pdf?sequence=1&isAllowed=y)
 
-**Native Data Resolution**: 0.25 degrees  
-**Values**: OMI/Aura Surface UVB Irradiance and Erythemal Dose Daily L2 Global Gridded 0.25 degree x 0.25 degree V3  
-**Time Range**: Daily data from 2005 - 2019  
-**Format**: HDF5
+**Downloaded**: July 19, 2017
 
-Citation: Jari Hovila, Antii Arola, and Johanna Tamminen (2014), OMI/Aura Surface UVB Irradiance and Erythemal Dose Daily L2 Global Gridded 0.25 degree x 0.25 degree V3, NASA Goddard Space Flight Center, Goddard Earth Sciences Data and Information Services Center (GES DISC), Accessed [June 22, 2020] DOI:10.5067/Aura/OMI/DATA2028.  
+**Description**:  Aragonite Saturation State  $\Omega_{arg}$
+
+**Native data resolution**: 1 degree cells
+
+**Time range**: 1880-1889 and 1958-2100, monthly data provided for each year. Future years are based on model projections for RCP 8.5. Previous years are hindcast/historical data.
+
+**Format**:  NetCDF
+
+**Notes about the data**:  
+
+This data was shared with us by Ivan Lima from Woods Hole Institue for Oceanography in July 2017. The data came as NetCDFs with a resolution of about 1 degree. The data values are monthly average surface &#937; aragonite saturation state.
+
+***
 
 # Setup 
 
 ```{r setup, message = F, warning = F}
-knitr::opts_chunk$set(echo = FALSE)
 
-library(tidyverse)
-library(doParallel)
-library(foreach)
-library(rworldmap)
+# Set options for all chunks in code
+knitr::opts_chunk$set(warning=FALSE, message=FALSE,fig.width=6, fig.height=6)
+
 library(raster)
-library(janitor)
-library(ggplot2)
-library(lubridate)
+library(ncdf4)
+library(maps)
+library(parallel)
+library(foreach)
+library(doParallel)
+library(RColorBrewer)
+library(fasterize)
+library(rasterVis)
 library(here)
+library(gstat)
+library(scales)
+library(animation)
 
 # Source and set file paths
 source(here('src/R/common.R'))
 
-dir_prs   <- '~/github/pal-prep/prep/pressures/uv/v2020'
+# Define paths for the raw data and OA folder held on git-annex on our NCEAS server, Mazu
+raw_dir   <- file.path(dir_M, 'git-annex/globalprep/_raw_data')
+oagit_dir <- file.path(dir_M, 'git-annex/globalprep/prs_oa')
+
+cols      <- rev(colorRampPalette(brewer.pal(9, 'Spectral'))(255)) # Rainbow color scheme
+
 ```
 
-# Methods
+***
 
-## Get Global Data
+## Load raw data  
 
-We will use the global data that was processed for OHI Global 2020, which includes data from 2005 - 2019. This data is saved on a server at NCEAS.   
+We received new data from Ivan Lima at WHOI from 1958 - 2016. This is provided in a single NetCDF file and on a regular 1x1 degree grid.
 
-```{r get-global-uv-data, eval=F}
+```{r load_data}
 
-anom_files <- list.files(file.path(glb_anx, 'prs_uv/v2020/int/annual_anomalies_diff'),
-                         pattern = "annual_pos",
-                         full.names = T)
+# read in 1958-2016 data
 
-# Get world map and plot the most recent year of data:
-world = getMap()
-
-plot(raster(anom_files[15]), col=cols, main = "UV Radiation Anomalies 2019", box=F, axes=F,
-     legend.args=list(text='Anomalous Weeks', side=4, font=2, line=2.5, cex=0.8))
-plot(world, col='black', add=T)
+raw <- stack(file.path(raw_dir, 'WHOI/cesm_co2sys_1958-2016.1x1d.nc'), varname="OARG") #grab aragonite variable using varname
+                    
+plot(raw[[1]]) #we'll have to rotate the rasters
+plot(rotate(raw[[1]]))
+maps::map('world', col='gray95', fill=T, border='gray80', add=T)
 ```
 
-## Crop to Palmyra
+# Historical Mean
 
-Using the `crop` function from the `raster` package we crop all uv rasters to the Palmyra extent and then reproject them to the US Albers projection for consistency across the assessment. We crop the global rasters first to reduce the time it takes to reproject the rasters. `ocean_ras_50nm` is used as a mask to remove land cells from the raster for better visuals.  
+The historical mean &#937; aragonite saturation state from 1880 - 1889 was calculated for OHI 2015. The same raster was used for OHI 2016 and is again used here for comparison.
 
+```{r hist_mean}
+hist <- raster(file.path(dir_M,'git-annex/globalprep/prs_oa/v2015/working/global_oa_1880_1889_arag_mean_moll.tif'))
 
-```{r crop-to-pal, eval=F}
-registerDoParallel(10) # Register 10 cores for parallel processing
+plot(hist,main='Mean Ωaragonite 1880-1889', col=rev(cols), box=F,axes=F)
+```
 
-foreach(f = anom_files) %dopar% {
-  #f = anom_files[15]
+#Create annual means
+
+Since this data is now on a regular grid, but the historical data from 1880-1889 was transformed previously from an irregular grid, there will be issues matching up the resolution and extent so we will need to use this historical mean raster that we created for OHI 2015 and on, to use as a template for resampling.
+
+```{r annual_means,eval=F}
+
+# define mollweide projection
+mollCRS <- CRS('+proj=moll')
+
+#register parallel cores
+
+registerDoParallel(10)
+
+foreach (i = seq(1,708,by=12)) %dopar% {
+
+  j = i+11
   
-  if(!file.exists(paste0(dir_anx,'/dataprep/prs_uv/output/uv_annual_anoms/annual_anom_',
-                         substr(basename(f), 22, 25),'.tif'))) {
-    
-  raster(f) %>%
-    projectRaster(ocean_rast3_100, method = 'ngb') %>%
-    crop(usalb_ext3) %>%  
-    mask(ocean_rast3_100, filename = paste0(dir_anx, '/dataprep/prs_uv/output/uv_annual_anoms/annual_anom_',
-                                             substr(basename(f), 22, 25),'.tif'), overwrite=T)
-    
-  } else {
-    message("Raster exists")
-  }
+  yr = substr(names(raw[[i]]),2,5)
+  
+  yr_mean = raw[[i:j]]%>%
+            calc(fun=function(x){mean(x,na.rm=T)})%>%
+            rotate()%>%
+            projectRaster(crs = mollCRS,over=T)%>%
+            resample(hist,method = 'ngb')%>%
+          writeRaster(.,filename = paste0(file.path(oagit_dir),'/v2017/int/annual_avg_moll/global_arag_avg_moll_',yr,'.tif'),overwrite=T)
+ 
 }
+
+
+```
+
+```{r plot_mean_2016}
+
+#Here is the output for 2016
+
+r_2016 <- raster(file.path(oagit_dir,'v2017/int/annual_avg_moll/global_arag_avg_moll_2016.tif'))
+
+plot(r_2016,box=F,axes=F,main="Mean Ωaragonite saturation state 2016", col=rev(cols))
  
 ```
 
-```{r check, eval=F, include=F}
-# Check a few rasters to make sure this makes sense:
-check07 <- raster(file.path(dir_anx, '/dataprep/prs_uv/output/uv_annual_anoms/annual_anom_2007.tif'))
-check19 <- raster(file.path(dir_anx, '/dataprep/prs_uv/output/uv_annual_anoms/annual_anom_2019.tif'))
+
+## Rescale from 0 to 1
+
+This pressure layer is rescaled so that all values lie between 0 and 1 using both a historical reference period and a biological reference point. All cells with values less than one, indicating an undersaturated state, are set equal to the highest stressor level, 1. For all other cells, rescaling the aragonite staturation state value to between 0 and 1 relies upon the change in saturation relative to the reference period.
+
+Deviation from aragonite saturation state is determined for each year in the study period using this equation:
+
+$$\Delta \Omega_{year} = \frac{(\Omega_{base} - \Omega_{year})}{(\Omega_{base} - 1)}$$
+
+Note that the current value is subtracted from the baseline; this way, a reduction in $\Omega$ becomes a positive pressure value.  It is then normalized by the current mean state; so a decrease in $\Omega$ while the current state is high indicates less pressure than the same decrease when the current state is near 1. 
+
+$\Delta \Omega_{year}$ is then modified to account for increases in aragonite saturation state (pressure = 0) and arag sat state less than 1 (pressure = 1).
+
+The `oaRescale` function rescales each of the annual rasters. If the current value is less than or equal to 1, it is set to 1, otherwise the value is calculated from the above equation.
+
+
+```{r rescale,eval=F}
+
+#for each layer, all values <=1 are assigned a 1, otherwise old-new/(old-1)
+
+oaRescale <- function(file){
+  
+  yr   = substr(file, nchar(file)-7, nchar(file)-4)  #get year of file
+  mean = raster(file)                              #get seasonal mean aragonite raster for given year
+  diff = (hist-mean)/(hist-1)
+  mean[mean<=1] <- 1                                 #all values at or less than 1 are given a value of 1
+  mean[mean>1] <- diff[mean>1]                     #all cells with values greater than 1 are swapped out with their amount of change scaled to how close to 1 
+  mean[mean<0] <- 0                                  #all values less than 0 (indicating a decrease in acidity) are capped at 0
+
+    writeRaster(mean, filename=paste0(oagit_dir, '/v2017/int/annual_avg_moll_rescaled/oa_rescaled_', yr, sep=""), format='GTiff', overwrite=TRUE)
+}
+
+files = list.files(file.path(oagit_dir, 'v2017/int/annual_avg_moll'), full.names=TRUE)
+
+mclapply(files, oaRescale, mc.cores = 16)
+```
+
+
+```{r plot rescale}
+
+r <- raster(file.path(oagit_dir,'v2017/int/annual_avg_moll_rescaled/oa_rescaled_2016.tif'))
+plot(r,col=cols,box=F,axes=F, main = 'Rescaled Ωaragonite layer for 2016')
+
+```
+
+
+## Interpolate
+
+Since there are oceanic cells with no information in the raw data, we need to fill in these gaps. We do this by interpolating across the globe using the data we have with an Inverse Distance Weighting (IDW) function. Previously this was done using `arcpy` from ArcGIS.
+
+
+```{r interpolate,eval=F}
+
+library(gstat)
+#register parallel cores
+
+registerDoParallel(24)
+
+files <- list.files(file.path(oagit_dir,'v2017/int/annual_avg_moll_rescaled'), full.names=TRUE)
+
+foreach(file = files) %dopar%{
+
+r  <- raster(file) #oa raster
+yr <- substr(file, nchar(file)-7, nchar(file)-4)
+xy <- data.frame(xyFromCell(r, 1:ncell(r)))                         #get xy coords into dataframe
+v  <- getValues(r)                                                  #get cell values 
+tmpdf <- cbind(xy, v)%>%filter(!is.na(v))                           #create dataframe of x,y, and values. remove NAs (throws error since these are cells we are interpolating over)
+mg <- gstat(id = "v", formula = v~1, locations = ~x+y, data=tmpdf,
+            nmax=7, set=list(idp = 2)) #define model. power function = 2, this is default for idw models
+z <- interpolate(r, mg, progress='text')                            #interpolate across NA cells
+
+writeRaster(z,filename  = paste0(file.path(oagit_dir),"/v2017/int/annual_avg_moll_rescaled_int/oa_resc_int_",yr,".tif"),overwrite=T)
+}
+```
+
+```{r}
+plot(raster(file.path(oagit_dir,'v2017/int/annual_avg_moll_rescaled_int/oa_resc_int_2016.tif')), col=cols, box=FALSE, axes=FALSE, main='Rescaled and Interpolated Ωaragonite layer for 2016')
+
+```
+
+
+## Resample & Land Mask
+
+All pressure layers need to be resampled to 1km^2^ cell resolution. We have a template ocean raster with cells at this resolution that we use to resample all pressure layers. You won't see any difference between the plot above and this one since we are using the nearest neighbor method when resampling which maintains the original cell value for each of resampled cell.
+
+```{r resample,eval=F}
+
+ocean <- raster(file.path(dir_M, "git-annex/globalprep/spatial/v2017/ocean.tif"))
+
+files <- list.files(file.path(oagit_dir,'v2017/int/annual_avg_moll_rescaled_int'),
+                    full.names = TRUE)
+
+foreach(file = files)%dopar% {
+#for(file in files){ # file=files[1] # for some reason cores weren't all working for me.  Did it the long way!
+  yr <- substr(file,nchar(file)-7,nchar(file)-4)
+  cat(yr)
+  raster(file)%>%
+  resample(ocean, method = 'ngb')%>%
+  mask(ocean, filename = paste0(oagit_dir, '/v2017/output/oa_prs_layer_',yr,'.tif'), overwrite=TRUE)
+}
+
+```
+
+
+# Final Pressure Layer
+
+```{r plot_final}
+plot(raster(file.path(oagit_dir, 'v2017/output/oa_prs_layer_2016.tif')), box=F, axes=F, col=cols, main='Final Ocean Acidification \nPressure Layer 2016')
+
+```
+
+
+# Gap-filled cells
+
+We want to create a raster layer that shows all cells that were gap-filled. Since they were the same cells interpolated across all years, we only need to create one raster.
+
+```{r,eval=F}
+
+#Rescaled data before interpolation 
+pre_int = raster(file.path(oagit_dir, 'v2017/int/annual_avg_moll_rescaled/oa_rescaled_2016.tif'))%>%
+                resample(ocean, progress='text', method = 'ngb')
+
+#after interpolation,
+r_int = raster(file.path(oagit_dir, 'v2017/output/oa_prs_layer_2016.tif'))
     
-plot(check07, col=cols, 
-     main = "Ultraviolet Radiation 2007", 
-     legend.args=list(text='Anomalous Weeks', side=4, font=2, line=2.5, cex=0.8))
+#interpolated (or gap-filled) cells    
+interp_cells = mask(r_int, pre_int, inverse=TRUE, filename = file.path(oagit_dir, 'v2017/output/oa_interpolated_cells.tif'))
+```
 
-plot(check19, col=cols, 
-     main = "Ultraviolet Radiation 2016",
-     legend.args=list(text='Anomalous Weeks', side=4, font=2, line=2.5, cex=0.8))
+```{r plot_interp_cells}
+plot(raster(file.path(oagit_dir, 'v2017/output/oa_interpolated_cells.tif')), col=cols, box=F, axes=F, main='Interpolated cells')
 ```
 
 
-## Visualize Change
+#Citation information  
 
-Visualize the change in radiation anomalies over time.   
+Woods Hole Oceanographic Institution. 2014 update to data originally published in: Feely, R.A., S.C. Doney, and
+S.R. Cooley. 2009. Ocean acidification: Present conditions and future changes in a high-CO2 world.
+Oceanography 22(4):36–47
 
-```{r gif1, eval=F}
-
-l <- lapply(list.files(file.path(dir_anx, "/dataprep/prs_uv/output/uv_annual_anoms"), full.names=T), raster) %>%
-                brick()
-
-names(l) <- paste0("Year", (substr(names(l),13,16))) # Rename each layer for plotting
-
-# Make a gif animation
-library(animation)
-
-saveGIF({
-  for(i in 1:nlayers(l)){
-      # don't forget to fix the zlimits
-      plot(l[[i]], zlim=c(0,52), axes=F, col=cols,
-           main=names(l[[i]]),
-           legend.args=list(text='Anomalous Weeks', side=4, font=2, line=2.5, cex=0.8))
-      
-  }
-}, movie.name = 'uv_annual_anoms.gif')
-```
-
-<img src="uv_annual_anoms.gif"/>
-
-## Five-year Aggregates
-
-Calculate total anomalous weeks for each 5-year period from 2005 - 2019.         
-
-```{r, five-year, eval=F}
-
-l <- list.files(file.path(dir_anx, "/dataprep/prs_uv/output/uv_annual_anoms"), full.names=T)
-
-# Last 5 year periood will start in 2015
-for(i in 2005:2015){ #i=2005
-  
-  yrs <- c(i,i+1,i+2,i+3,i+4)
-  s   <- stack(l[substr(basename(l), 13, 16)%in%yrs]) %>% sum(.)
-  
-  writeRaster(s, filename = paste0(dir_anx, "/dataprep/prs_uv/output/uv_sum_anoms/sum_anoms_",
-                                   min(yrs), '-', max(yrs), '.tif'), overwrite=T)
-}
-```
-
-## Rescale
-
-To account for annual variation, we look at UV anomalies in 5 year periods, so the maximum value possible per cell is 260 anomalous weeks. To rescale the values from 0 to 1 we need to set a reference point. Previously, the reference point for UV has just been the maximum difference in anomalous weeks between the most recent time period and a historical reference period (2005-2009).
-
-This time we have decided to use a reference point that represents a regime shift. Once a given cell is anomalous for more than 50% of a five-year period, it has shifted into a new regime. All cells that have a value greater than 130 weeks (51% of a 5 year time period) are assigned a 1. The rest of the cells are scaled to this reference point by dividing by 130.
-
-```{r rescale, eval=F}
-
-uv_aggs <- list.files(file.path(dir_anx, "/dataprep/prs_uv/output/uv_sum_anoms"), full.names=T)
-
-# Define the rescale function
-resc_func <- function(x){
-  
-  # Get the year from the file for naming the output raster
-  yrs <- substr(basename(x), 11, 19)
- 
-  # If a cell value is >= the reference point (130 weeks), assign a value of 1, otherwise divide by the reference point
-  raster(x) %>%
-  calc(.,fun=function(x){ifelse(x<0, 0, ifelse(x>130, 1, x/130))},
-         filename = paste0(dir_anx, '/dataprep/prs_uv/output/uv_rescaled/uv_rescale_', yrs, '.tif'), overwrite=T)
-}
-
-# Rescale 
-foreach(file = uv_aggs) %dopar% {
-  resc_func(file)
-}
-```
-
-## Presure Over Time
-
-Visualize the change in aggregated radiation anomolies over time.   
-
-```{r gif_rescale, eval = F}
-
-resc <- lapply(list.files(file.path(dir_anx, '/dataprep/prs_uv/output/uv_rescaled'), full.names=T), raster) %>% 
-  brick()
-
-names(resc) <- paste0("Years_", (substr(names(resc), 12, 20)))
-gsub(".", "-", names(resc), fixed = TRUE)
-
-# Create a gif of values over time
-saveGIF({
-  for(i in 1:nlayers(resc)){
-      # Don't forget to fix the zlimits
-      plot(resc[[i]], zlim=c(0,1), axes=F, col=cols,
-           main=names(resc[[i]]),
-           legend.args=list(text='Anomalous Weeks', side=4, font=2, line=2.5, cex=0.8))
-      
-  }
-}, movie.name = 'uv_rescale.gif')
-```
-
-<img src="uv_rescale.gif"/>   
-
-# Results
-
-## Scores
-
-```{r uv-scores, eval=F}
-
-# Use the rescaled files for scores
-uv_stack <- lapply(list.files(file.path(dir_anx, '/dataprep/prs_uv/output/uv_rescaled'),full.names=T), raster) %>%
-  brick()
-
-# Find the mean 
-pal_stats <- zonal(uv_stack,  ocean_rast3_100, fun="mean", na.rm=TRUE, progress="text") %>%
-                  data.frame() %>% 
-                  clean_names()
-
-# Convert into a data frame, add additional columns
-uv_data <- pivot_longer(pal_stats,
-                        cols = uv_rescale_2005_2009:uv_rescale_2015_2019,
-                        names_to = "years", values_to = "pressure_score") %>% 
-  mutate(
-    year = substr(years,17,20),
-    year = as.numeric(year)) %>% 
-  dplyr::select(region_id = zone, year, pressure_score)
-
-# Save to output folder
-write_csv(uv_data, file.path(dir_prs, "output/uv_pressure.csv"))
-```
-
-## Save To Toolbox
-
-```{r save-to-toolbox, eval=F}
-
-```
-
-
-## Final Visualization
-
-```{r uv-viz}
-uv_data <- read_csv("output/uv_pressure.csv")
-
-
-ggplot(uv_data, aes(x = year, y = pressure_score)) +
-  geom_line() + 
-  scale_x_continuous(expand = c(0,0), breaks = seq(2010,2018, by=2),
-                     limits = c(2009,2019)) + 
-  scale_y_continuous(expand = c(0,0), limits = c(0.25,0.45)) + 
-  labs(y = "Pressure Score", x = "Year") + 
-  theme_minimal()
-```
-
-This code chunk creates a google visualization of the scores through time. It unfortunately does not allow the google chart to show up in the RMarkdown knitted document.
-
-```{r googlevis}
-library(googleVis)
-
-plotData <- uv_data %>%
-  dplyr::select(region_id, year, pressure_score)
-
-Motion <- gvisMotionChart(plotData, 
-                       idvar="region_id", 
-                       timevar="year")
-plot(Motion)
-print(Motion, file='uv.html')
-```
