--- a/prep/pressures/slr/v2020/slr_pressure_layer.Rmd
+++ b/prep/pressures/slr/v2020/slr_pressure_layer.Rmd
@@ -17,13 +17,13 @@ output:
 
 # Summary 
 
-This sea level rise (SLR) pressure layer preparation script does the following for newly available SLR data:
+The sea level rise (SLR) pressure layer for Palmyra is derived from a global raster of monthly data indicating mean sea level anomalies from 1993 to 2019. This preparation script does the following for newly available global SLR data:
   
 - Clips all monthly rasters to the coast using a 3 nautical mile offshore buffer
 - Calculates annual mean sea level anomaly rasters from monthly data
 - Rescales values from 0 to 1 using the reference point (maximum annual anomaly across the time series)
 - Sets to zero all negative values, indicating decreases in mean sea level
-- Resamples raster to ~ 1km^2^ and reprojects to Molleweide
+- Resamples raster to ~ 1km^2^ and reprojects to US Albers projection
 
 This process is completed entirely within this script. The raw data is downloaded externally and held on a server at NCEAS. Although the raw data is not provided, this script can be used on the data downloaded from Aviso [here](https://www.aviso.altimetry.fr/data/products/sea-surface-height-products/global/gridded-sea-level-anomalies-mean-and-climatology.html). You will need to register with Aviso in order to get a username and password for data access.
 
