--- a/prep/pressures/oa/v2020/oa_pressure_layer.Rmd
+++ b/prep/pressures/oa/v2020/oa_pressure_layer.Rmd
@@ -33,19 +33,17 @@ This ocean acidification (OA) pressure layer preparation script does the followi
 
 **Downloaded**: July 19, 2017
 
-**Description**:  Aragonite Saturation State  $\Omega_{arg}$
+**Description**: Aragonite Saturation State  $\Omega_{arg}$
 
 **Native data resolution**: 1 degree cells
 
 **Time range**: 1880-1889 and 1958-2100, monthly data provided for each year. Future years are based on model projections for RCP 8.5. Previous years are hindcast/historical data.
 
-**Format**:  NetCDF
+**Format**: NetCDF
 
-**Citation information**:  Woods Hole Oceanographic Institution. 2014 update to data originally published in: Feely, R.A., S.C. Doney, andvS.R. Cooley. 2009. Ocean acidification: Present conditions and future changes in a high-CO2 world. Oceanography 22(4):36–47
+**Citation information**: Woods Hole Oceanographic Institution. 2014 update to data originally published in: Feely, R.A., S.C. Doney, andvS.R. Cooley. 2009. Ocean acidification: Present conditions and future changes in a high-CO2 world. Oceanography 22(4):36–47
 
-**Notes about the data**:  
-
-This data was shared with NCEAS by Ivan Lima from Woods Hole Institute for Oceanography in July 2017. Originally, data were provided from 1958 - 2016; additional years of data up until 2020 were received from Ivan Lima. The data came as NetCDFs with a resolution of about 1 degree. The data values are monthly average surface &#937; aragonite saturation state.
+**Notes about the data**: This data was shared with NCEAS by Ivan Lima from Woods Hole Institute for Oceanography in July 2017. Originally, data were provided from 1958 - 2016; additional years of data up until 2020 were received from Ivan Lima. The data came as NetCDFs with a resolution of about 1 degree. The data values are monthly average surface &#937; aragonite saturation state.
 
 ***
 
@@ -54,7 +52,7 @@ This data was shared with NCEAS by Ivan Lima from Woods Hole Institute for Ocean
 ```{r setup, message = F, warning = F}
 
 # Set options for all chunks in code
-knitr::opts_chunk$set(warning=FALSE, message=FALSE,fig.width=6, fig.height=6)
+knitr::opts_chunk$set(warning=FALSE, message=FALSE, fig.width=6, fig.height=6)
 
 library(raster)
 library(ncdf4)
@@ -73,8 +71,7 @@ library(animation)
 # Source and set file paths
 source(here('src/R/common.R'))
 
-raw_dir   <- file.path(dir_M, 'git-annex/globalprep/_raw_data') # Path to raw data held on NCEAS server, Mazu
-cols      <- rev(colorRampPalette(brewer.pal(9, 'Spectral'))(255)) # Rainbow color scheme
+raw_dir  <- file.path(dir_M, 'git-annex/globalprep/_raw_data') # Path to raw data held on NCEAS server, Mazu
 
 ```
 
